# pan

./: Dockerfile  docker-entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  test.conf
.github/workflows/: build.yml
pan/: __init__.py
pan/static/: package-lock.json  package.json  vue.config.js
pan/static/public/: index.html
pan/static/src/: App.vue  main.js
pan/static/src/components/: HelloWorld.vue
