[tool.poetry]
name = "pan"
version = "0.1.0"
description = "Speaker control"
authors = ["David Francos <davidfrancos@sipay.es>"]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"
loguru = "^0.6.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pan = "pan:main"
